# ghoti-shell

./: Cargo.toml  README.md  build.rs  deny.toml
ghoti-exec/: Cargo.toml
ghoti-exec/src/: builtins.rs  command.rs  io.rs  lib.rs  tests.rs  utils.rs
ghoti-exec/src/builtins/: test.rs
ghoti-shell/: Cargo.toml
ghoti-shell/src/: lib.rs  main.rs  repl.rs
ghoti-syntax/: Cargo.toml  build.rs
ghoti-syntax/src/: error.rs  grammar.lalrpop  lib.rs  parse.rs  tests.rs  validate.rs  visit.rs
src/: exec.rs  lib.rs  main.rs  syntax.rs
src/exec/: builtins.rs  utils.rs
src/syntax/: grammar.lalrpop  parse.rs  parse2.rs
