[package]
name = "ghoti-shell"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[dependencies]
anyhow = "1.0.97"
chumsky = { version = "1.0.0-alpha.8", features = ["pratt"] }
dyn-clone = "1.0.19"
either = "1.15.0"
os_pipe = "1.2.1"
rustyline = "15.0.0"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["io-util", "macros", "process", "rt"] }
tracing = "0.1.41"
