[package]
name = "ghoti-exec"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
annotate-snippets = "0.11.5"
clap = { version = "4.5.34", default-features = false, features = ["derive", "std"] }
dyn-clone = "1.0.19"
either = "1.15.0"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
ghoti-syntax.path = "../ghoti-syntax"
itertools = "0.14.0"
os_pipe = "1.2.1"
owo-colors = "4.2"
rustix = { version = "1.0.5", features = ["fs", "termios"] }
scopeguard = "1.2.0"
thiserror = "2"
tokio = { version = "1.44", features = ["process", "io-util", "macros", "rt"] }
